# auth0-spa-rust

./: Cargo.toml  README.md
src/: lib.rs
src/auth_yew/: mod.rs  model.rs  permissions.rs
testing/app/: Cargo.toml  index.html
testing/app/src/: main.rs  route.rs
testing/app/src/common/: mod.rs
testing/selenium/: Cargo.toml
testing/selenium/src/: login.rs  main.rs
testing/selenium/src/common/: mod.rs
