[package]
name = "auth0-spa-rust"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = { version="=0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "=0.4.24"
js-sys = "0.3.51"
once_cell = "1.7.2"

log = { version = "0.4", optional = true }
futures = { version = "0.3.15", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
yew = { version = "0.19.3", optional = true }
lazy_static = { version = "1.4.0", optional = true }
gloo-timers = { version = "0.2.2", optional = true }
yew-agent = { version = "0.1.0", optional = true }
web-sys = { version = "0.3.50", features = [
    "console"
] }

[features]
default = [ "auth0-yew" ]
auth0-yew = ["log", "futures", "serde", "yew", "lazy_static", "gloo-timers", "yew-agent"]
