[package]
name = "trunk-template"
version = "0.1.0"
edition = "2018"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = "1.7.2"
log = { version = "0.4" }
futures = { version = "0.3.15" }
serde = { version = "1.0", features = ["derive"] }
yew = { version = "0.19.3" }
lazy_static = { version = "1.4.0" }
auth0-spa-rust = { path = "../../", features = ["auth0-yew"] }
wasm-bindgen = { version="=0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "=0.4.24"
js-sys = "0.3.51"
yewtil = { version = "0.3.2", features = ["stable"] }
yew-router = { version="0.15.0", features = ["web_sys"] }
gloo-timers = "0.2.2"
web-sys = { version = "0.3.50", features = [
    "console"
] }
yew-agent = "0.1.0"
