[package]
name = "selenium"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.25.1"
tokio = { version = "1.8.0", features = ["time"] }
log = { version = "0.4" }
futures = { version = "0.3.15" }
serde = { version = "1.0", features = ["derive"] }
yew = { version = "0.18" }
lazy_static = { version = "1.4.0" }
auth0-spa-rust = { path = "../../", features = ["auth0-yew"] }
wasm-bindgen = { version="0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3.51"
yewtil = { version = "0.3.2", features = ["stable"] }
